--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
     </header>
 
     <!-- Portfolio Grid Section -->
-    <section class="portfolio" id="portfolio">
+    <!-- <section class="portfolio" id="portfolio">
       <div class="container">
-        <h2 class="text-center text-uppercase text-secondary mb-0">Portfolio</h2>
+        <h2 class="text-center text-uppercase text-secondary mb-0">About</h2>
         <hr class="star-dark mb-5">
         <div class="row">
           <div class="col-md-6 col-lg-4">
@@ -130,7 +130,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
     <!-- About Section -->
     <section class="bg-primary text-white mb-0" id="about">
@@ -139,17 +139,17 @@
         <hr class="star-light mb-5">
         <div class="row">
           <div class="col-lg-4 ml-auto">
-            <p class="lead">Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</p>
+              <hr>
+              <h3>略歴</h3>
+              <p>福井県立高志高等学校 理数科 卒業(2014.3)</p>
+              <p>福井大学 工学部 情報・メディア工学科 卒業(2018.3)</p>
+              <p>福井大学 工学研究科 情報・メディア工学専攻(2018.4〜)</p>
+              <hr>
+              <h3>所属</h3>
+              <p>福井大学 工学研究科 <br>
+                情報・メディア工学専攻 吉田研究室</p>
+              <hr>
           </div>
-          <div class="col-lg-4 mr-auto">
-            <p class="lead">Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</p>
-          </div>
-        </div>
-        <div class="text-center mt-4">
-          <a class="btn btn-xl btn-outline-light" href="#">
-            <i class="fa fa-download mr-2"></i>
-            Download Now!
-          </a>
         </div>
       </div>
     </section>
