--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
     <section class="mb-0" id="about">
       <div class="container">
         <h2 class="text-center text-uppercase text-secondary">Profile</h2>
-        <hr class="star-light mb-5">
+        <!-- <hr class="star-light mb-5"> -->
         <div class="row">
-          <div class="col-lg-4 ml-auto">
+          <div class="col-lg-12 ml-auto">
               <hr>
               <h3>略歴</h3>
               <p>福井県立高志高等学校 理数科 卒業(2014.3)</p>
