--- a/index.html
+++ b/index.html
@@ -84,26 +84,30 @@
       </div>
     </section>
 
-      <!-- About Section -->
-  <!-- <section class="mb-0" id="about">
+      <!-- Event Section -->
+  <section class="bg-primary text-white mb-0" id="events">
       <div class="container">
-        <h2 class="text-center text-uppercase text-secondary mb-0">About</h2>
+        <h2 class="text-center text-uppercase text-white">イベント参加記録</h2>
         <div class="row">
           <div class="col-lg-12 ml-auto">
             <hr>
-            <h3>略歴</h3>
-            <p>浜松工業高校 情報技術科 卒業(2014.3)</p>
-            <p>福井大学 工学部 情報・メディア工学科 卒業(2018.3)</p>
-            <p>福井大学 工学研究科 情報・メディア工学専攻(2018.4〜)</p>
+            <h3>2015</h3>
+            <p>
+              <a class="text-white" href="https://icpc.iisf.or.jp/2015-tsukuba/domestic/standings-and-results/?lang=ja">ICPC 国内予選参加（Nigiyaka-Udon）</a>
+            </p>
             <hr>
-            <h3>所属</h3>
-            <p>福井大学 工学研究科 <br>
-              情報・メディア工学専攻 吉田研究室</p>
+            <h3>2017</h3>
+            <p>
+              <a class="text-white" href="http://muttan1203.hatenablog.com/entry/isucon7-qual">ISUCON7 予選参加</a>
+            </p>
+            <hr>
+            <h3>2018</h3>
+
             <hr>
           </div>
         </div>
       </div>
-    </section> -->
+    </section>
 
     <!-- Contact Section -->
     <section id="contact">
