--- a/index.html
+++ b/index.html
@@ -114,54 +114,77 @@
       </div>
     </section>
 
-    <!-- Contact Section -->
-    <!-- <section id="contact">
-      <div class="container">
-        <h2 class="text-center text-uppercase text-secondary mb-0">Contact Me</h2>
-        <hr class="star-dark mb-5">
-        <div class="row">
-          <div class="col-lg-8 mx-auto">
-            <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19. -->
-            <!-- The form should work on most web servers, but if the form is not working you may need to configure your web server differently. -->
-       <!--     <form name="sentMessage" id="contactForm" novalidate="novalidate">
-              <div class="control-group">
-                <div class="form-group floating-label-form-group controls mb-0 pb-2">
-                  <label>Name</label>
-                  <input class="form-control" id="name" type="text" placeholder="Name" required="required" data-validation-required-message="Please enter your name.">
-                  <p class="help-block text-danger"></p>
+    <!-- Slides Section -->
+  <section class="mb-0" id="benkyokai">
+    <div class="container">
+      <h2 class="text-center text-uppercase text-secondary mb-0">勉強会関連</h2>
+      <hr>
+      <div class="row">
+        <div class="col-lg-12 ml-auto">
+          <!-- collapse -->
+          <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+            <div class="panel panel-default">
+              <div class="panel-heading" role="tab" id="headingOne">
+                <h4 class="panel-title">
+                  <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseRubyPractice" aria-expanded="true" aria-controls="collapseRubyPractice" class=" text-secondary">
+                    たのしいRuby
+                  </a>
+                </h4>
+              </div>
+            </div>
+            <hr>
+            <div class="panel panel-default">
+              <div class="panel-heading" role="tab" id="headingTwo">
+                <h4 class="panel-title">
+                  <a class="collapsed text-secondary" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseLargeScaleWebService" aria-expanded="false"
+                    aria-controls="collapseLargeScaleWebService">
+                    大規模Webサービス入門 輪読担当分
+                  </a>
+                </h4>
+              </div>
+              <div id="collapseLargeScaleWebService" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
+                <div class="panel-body">
+                  <a href="" class=" text-secondary">第3回 OSのキャッシュと分散</a>
+                </div>
+                <div class="panel-body">
+                  <a href="" class=" text-secondary">第9回 全文検索技術に挑戦</a>
+                </div>
+                <div class="panel-body">
+                  <a href="" class=" text-secondary">特別編 今どきのWebサービス構築に求められる実践技術</a>
                 </div>
               </div>
-              <div class="control-group">
-                <div class="form-group floating-label-form-group controls mb-0 pb-2">
-                  <label>Email Address</label>
-                  <input class="form-control" id="email" type="email" placeholder="Email Address" required="required" data-validation-required-message="Please enter your email address.">
-                  <p class="help-block text-danger"></p>
+            </div>
+            <hr>
+            <div class="panel panel-default">
+              <div class="panel-heading" role="tab" id="headingTwo">
+                <h4 class="panel-title">
+                  <a class="collapsed text-secondary" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseWebTechnologies" aria-expanded="false" aria-controls="collapseWebTechnologies">
+                    Web技術の基本
+                  </a>
+                </h4>
+              </div>
+            </div>
+            <hr>
+            <div class="panel panel-default">
+              <div class="panel-heading" role="tab" id="headingTwo">
+                <h4 class="panel-title">
+                  <a class="collapsed text-secondary" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseHandsOn" aria-expanded="false" aria-controls="collapseHandsOn">
+                    勉強会ハンズオン等
+                  </a>
+                </h4>
+              </div>
+              <div id="collapseHandsOn" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
+                <div class="panel-body">
+                  <a href="" class="text-secondary">簡単なDiscordのbotを作ってみよう</a>
                 </div>
               </div>
-              <div class="control-group">
-                <div class="form-group floating-label-form-group controls mb-0 pb-2">
-                  <label>Phone Number</label>
-                  <input class="form-control" id="phone" type="tel" placeholder="Phone Number" required="required" data-validation-required-message="Please enter your phone number.">
-                  <p class="help-block text-danger"></p>
-                </div>
-              </div>
-              <div class="control-group">
-                <div class="form-group floating-label-form-group controls mb-0 pb-2">
-                  <label>Message</label>
-                  <textarea class="form-control" id="message" rows="5" placeholder="Message" required="required" data-validation-required-message="Please enter a message."></textarea>
-                  <p class="help-block text-danger"></p>
-                </div>
-              </div>
-              <br>
-              <div id="success"></div>
-              <div class="form-group">
-                <button type="submit" class="btn btn-primary btn-xl" id="sendMessageButton">Send</button>
-              </div>
-            </form>
-          </div>
+            </div>
+            <hr>
+          </div> <!-- end collapse -->
         </div>
       </div>
-    </section> -->
+    </div>
+  </section>
 
     <!-- Footer -->
   <footer class="footer text-center">
