--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <!-- Header -->
     <header class="masthead bg-primary text-white text-center">
       <div class="container">
-        <img class="img-fluid mb-5 d-block mx-auto" src="img/profile.png" alt="">
+        <img class="img-fluid mb-5 d-block mx-auto" src="img/degu.jpg" alt="">
         <h1 class="text-uppercase mb-0"></h1>
         <hr class="star-light">
         <h2 class="font-weight-light mb-0">kitah/ちゃんきた</h2>
@@ -144,7 +144,7 @@
               </div>
               <div id="collapseLargeScaleWebService" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
                 <div class="panel-body">
-                  <a href="" class=" text-secondary">第3回 OSのキャッシュと分散</a>
+                  <a href="https://speakerdeck.com/changkitah3_/da-gui-mo-sabisuji-shu-ru-men-di-3hui" class=" text-secondary">第3回 OSのキャッシュと分散</a>
                 </div>
                 <div class="panel-body">
                   <a href="" class=" text-secondary">第9回 全文検索技術に挑戦</a>
