--- a/index.html
+++ b/index.html
@@ -147,10 +147,10 @@
                   <a href="https://speakerdeck.com/changkitah3_/da-gui-mo-sabisuji-shu-ru-men-di-3hui" class=" text-secondary">第3回 OSのキャッシュと分散</a>
                 </div>
                 <div class="panel-body">
-                  <a href="" class=" text-secondary">第9回 全文検索技術に挑戦</a>
+                  <a href="https://speakerdeck.com/changkitah3_/da-gui-mo-sabisuji-shu-ru-men-di-9hui" class=" text-secondary">第9回 全文検索技術に挑戦</a>
                 </div>
                 <div class="panel-body">
-                  <a href="" class=" text-secondary">特別編 今どきのWebサービス構築に求められる実践技術</a>
+                  <a href="https://speakerdeck.com/changkitah3_/da-gui-mo-sabisuji-shu-ru-men-te-bie-bian" class=" text-secondary">特別編 今どきのWebサービス構築に求められる実践技術</a>
                 </div>
               </div>
             </div>
